--- a/.github/workflows/update-year.yml
+++ b/.github/workflows/update-year.yml
@@ -10,3 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
     - run: 'sed -i -e "s/headblockhead-[0-9]\{4\}/headblockhead-`date +"%Y"`/g" README.md' # replaces headblockhead-XXXX with headblockhead-currentyear
+    - name: Commit and push
+      run: |
+        git config user.name 'github-actions[bot]'
+        git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+        git commit -am "chore: update year for view counter"
+        git push
