--- a/.github/workflows/update-monthly.yml
+++ b/.github/workflows/update-monthly.yml
@@ -1,18 +1,18 @@
-name: Update the yearly counter
+name: Update the monthly view counter
 on: 
   workflow_dispatch:
   schedule:
-    - cron: "0 0 1 1 *" # At 00:00 every January 1st
+    - cron: "0 0 1 * *" # At 00:00 every 1st of each month.
 
 jobs:
   increment-year:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
-    - run: 'sed -i -e "s/headblockhead-[0-9]\{4\}/headblockhead-`date +"%Y"`/g" README.md' # replaces headblockhead-XXXX with headblockhead-currentyear
+    - run: 'sed -i -e "s/headblockhead-[0-9]\{4\}-[0-9]\{2\}/headblockhead-`date +"%Y-%m"`/g" README.md' # replaces headblockhead-XXXX-XX with headblockhead-currentyear-currentmonth
     - name: Commit and push
       run: |
         git config user.name 'github-actions[bot]'
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        git commit -am "chore: update year for view counter"
+        git commit -am "chore: update month for view counter"
         git push
